--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
   "cSpell.words": [
     "ftnfurina",
     "pytest",
-    "pycache"
+    "pycache",
+    "levelname"
   ],
   "cSpell.ignorePaths": [
     ".*",
