Use property instead of the update_* method

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
   "cSpell.words": [
     "ftnfurina",
-    "pytest",
+    "levelname",
     "pycache",
-    "levelname"
+    "pytest",
+    "setattr"
   ],
   "cSpell.ignorePaths": [
     ".*",
